# aLSuh1iIWKXxxGRJJ121

./: .gitignore  INSTRUCTIONS.md  Makefile  README.md  api.spec.yaml  app.py  data.db  data.db-journal  database.py  db.py  dev.env  docker-compose.yml  index.html  manage.py  mydatabase.db  orders.db  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: sonarqube-scanner.yaml
api/: __init__.py  urls.py
api/application/: ping_service.py
api/infrastructure/: ping_controller.py
docker/: Dockerfile
scripts/: script.js
static/: script.js  script_endpoint  style.css  style_endpoint.css
styles/: style.css
templates/: api.html  endpoint.html  index.html
tests/: __init__.py
tests/application/: test_ping_service.py
tests/infrastructure/: test_ping_controller.py
