[tool.poetry]
name = "api-skeleton-py-flask"
version = "0.1.0"
description = ""
authors = ["rviewer-team <dev@rviewer.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
